try to fix footer on mobile view: add flexbox to App

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 .App {
+  display: flex;
+  flex-direction: column;
   width: 100vw;
   min-height: 100%;
   text-align: center;
